--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-paginate": "^6.3.2",
+    "react-router-dom": "^5.2.0",
     "webpack": "^4.44.0",
     "webpack-cli": "^3.3.12"
   },
