--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-modal": "^3.11.2",
     "react-paginate": "^6.3.2",
     "react-router-dom": "^5.2.0",
     "webpack": "^4.44.0",
